@@ -35,6 +35,7 @@ BEGIN
   IDS_STATCOMPANY         "http://passwordsafe.sourceforge.net/"
   IDS_STATAUTOTYPE        "Double-Click on entry to Autotype"
   IDS_STATBROWSE          "Double-Click on entry to Browse to URL"
+  IDS_STATBROWSEPLUS      "Double-Click on entry to Browse to URL + Autotype"
   IDS_STATCOPYPASSWORD    "Double-Click on entry to Copy Password"
   IDS_STATCOPYNOTES       "Double-Click on entry to Copy Notes"
   IDS_STATCOPYUSERNAME    "Double-Click on entry to Copy Username"
@@ -215,6 +216,7 @@ STRINGTABLE
 BEGIN
   IDS_DCAAUTOTYPE         "Autotype"
   IDS_DCABROWSE           "Browse to URL"
+  IDS_DCABROWSEPLUS       "Browse to URL + Autotype"
   IDS_DCACOPYNOTES        "Copy notes to clipboard"
   IDS_DCACOPYPASSWORD     "Copy password to clipboard"
   IDS_DCACOPYUSERNAME     "Copy username to clipboard"
